[gd_scene load_steps=3 format=3 uid="uid://bonxjo04n02ra"]

[ext_resource type="Script" path="res://scenes/elements/islands/island/island.gd" id="1_krgfl"]
[ext_resource type="TileSet" uid="uid://dbjcs7lsyh5t5" path="res://resources/base_tile_set.tres" id="2_sxtuc"]

[node name="Island" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_krgfl")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_sxtuc")
format = 2
layer_0/name = "water"
layer_1/name = "ground"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(131072, 65536, 5, 196608, 65536, 6, 262144, 65536, 6, 327680, 65536, 6, 393216, 65536, 7, 65537, 65536, 5, 131073, 327680, 6, 196609, 655360, 2, 262145, 131072, 6, 327681, 655360, 2, 393217, 327680, 5, 458753, 65536, 7, 2, 65536, 5, 65538, 327680, 6, 131074, 131072, 6, 196610, 655360, 2, 262146, 655360, 2, 327682, 655360, 2, 393218, 655360, 2, 458754, 327680, 5, 524290, 65536, 7, 3, 131072, 5, 65539, 655360, 2, 131075, 131072, 6, 196611, 655360, 2, 262147, 655360, 2, 327683, 655360, 2, 393219, 655360, 2, 458755, 655360, 2, 524291, 131072, 7, 4, 131072, 5, 65540, 655360, 2, 131076, 655360, 2, 196612, 655360, 2, 262148, 655360, 2, 327684, 655360, 2, 393220, 655360, 2, 458756, 655360, 2, 524292, 131072, 7, 5, 196608, 5, 65541, 262144, 6, 131077, 655360, 2, 196613, 655360, 2, 262149, 655360, 2, 327685, 655360, 2, 393221, 655360, 2, 458757, 655360, 2, 524293, 131072, 7, 65542, 131072, 5, 131078, 655360, 2, 196614, 655360, 2, 262150, 655360, 2, 327686, 655360, 2, 393222, 655360, 2, 458758, 262144, 5, 524294, 196608, 7, 65543, 196608, 5, 131079, 262144, 6, 196615, 655360, 2, 262151, 655360, 2, 327687, 655360, 2, 393223, 262144, 5, 458759, 196608, 7, 131080, 196608, 5, 196616, 196608, 6, 262152, 196608, 6, 327688, 196608, 6, 393224, 196608, 7)
layer_2/name = "ash"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
layer_3/name = "decoration"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = true
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()
layer_4/name = "selection"
layer_4/enabled = true
layer_4/modulate = Color(1, 1, 1, 0.0784314)
layer_4/y_sort_enabled = false
layer_4/y_sort_origin = 0
layer_4/z_index = 0
layer_4/tile_data = PackedInt32Array(196608, 2, 0, 131072, 2, 0, 262144, 2, 0, 327680, 2, 0, 393216, 2, 0, 393217, 2, 0, 393219, 2, 0, 393218, 2, 0, 327682, 2, 0, 327681, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 327686, 2, 0, 393221, 2, 0, 393220, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 524291, 2, 0, 524290, 2, 0, 524292, 2, 0, 524293, 2, 0, 458757, 2, 0, 458756, 2, 0, 524294, 2, 0, 458758, 2, 0, 393222, 2, 0, 393223, 2, 0, 458759, 2, 0, 393224, 2, 0, 327688, 2, 0, 262152, 2, 0, 196616, 2, 0, 131080, 2, 0, 131079, 2, 0, 196614, 2, 0, 196613, 2, 0, 327685, 2, 0, 327684, 2, 0, 327683, 2, 0, 262151, 2, 0, 327687, 2, 0, 196615, 2, 0, 131078, 2, 0, 131077, 2, 0, 65541, 2, 0, 65540, 2, 0, 131076, 2, 0, 131075, 2, 0, 196611, 2, 0, 196610, 2, 0, 131073, 2, 0, 65537, 2, 0, 65538, 2, 0, 196609, 2, 0, 196612, 2, 0, 131074, 2, 0, 65539, 2, 0, 65542, 2, 0, 65543, 2, 0, 5, 2, 0, 4, 2, 0, 3, 2, 0, 2, 2, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(16, 16)
polygon = PackedVector2Array(-16, 16, -16, 96, 0, 96, 0, 112, 16, 112, 16, 128, 96, 128, 96, 112, 112, 112, 112, 96, 128, 96, 128, 16, 112, 16, 112, 0, 80, 0, 80, -16, 16, -16, 16, 0, 0, 0, 0, 16)

[node name="TargetPosition" type="Marker2D" parent="."]
position = Vector2(71, 72)

[node name="LandingAnimation" type="Node2D" parent="."]
y_sort_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="LandingAnimation"]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
